down arrow scroll function

--- a/character.html
+++ b/character.html
@@ -76,15 +76,10 @@
 
     <div class="line-break"></div>
 
-    <div class="down-arrow" onclick="window.scrollBy({ top: 850, behavior: 'smooth' });">
-        <img src="https://d2w9rnfcy7mm78.cloudfront.net/36504222/original_05fc080d3784198161f4f7ab38a9ce45.png?1746573715?bc=0" alt="">
-      </div>
+    <div class="down-arrow" id="arrow-alternative" onclick="scrollToTitle();">
+        <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832749/original_57974ec6032a64257d8e444971b23858.png?1744077258?bc=0" alt="Down Arrow Alternative">
     </div>
-
-    <div class="down-arrow" id="arrow-hide">
-        <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832749/original_57974ec6032a64257d8e444971b23858.png?1744077258?bc=0 alt="">
-      </div>
-    </div>
+    
 
     <div class="story">
         <div class="content">
@@ -568,34 +563,35 @@
                     Locations
                 </div>
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832297/original_cfc4b90487ac384b71b6caffe6fd62e1.png?1744075314?bc=0" alt="Right decoration">
-              </div>
-            <div class="title" id="h1">All the locations in arcane</div>
+            </div>
+            <div class="title" id="h1">main locations in arcane</div>
     
-            <!-- location carousel only edit this-->
+            <!-- carousel -->
             <div class="carousel">
                 <div class="slide">
                     <div class="topic" id="h4">Piltover</div>
                     <div class="image-row">
-                        <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910952/original_7ebb2617b527012f71bf19cf2f53f1bf.png?1744339313?bc=0" alt="" id="location-1">
+                        <img src="https://d2w9rnfcy7mm78.cloudfront.net/35910952/original_7ebb2617b527012f71bf19cf2f53f1bf.png?1744339313?bc=0" id="location-1" class="big-img">
                         <div class="secondary-images">
-                            <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690514/original_abf544c353a1c7575c7013aaa9d00a44.png?1743548958?bc=0" alt="">
-                            <img src="https://d2w9rnfcy7mm78.cloudfront.net/36028101/original_c063881be146af2e0ac0cc95a0e7e599.png?1744782617?bc=0" alt="">
+                            <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690514/original_abf544c353a1c7575c7013aaa9d00a44.png?1743548958?bc=0">
+                            <img src="https://d2w9rnfcy7mm78.cloudfront.net/36028101/original_c063881be146af2e0ac0cc95a0e7e599.png?1744782617?bc=0">
                         </div>
                     </div>
                 </div>
                 <div class="slide">
                     <div class="topic" id="h4">Zaun</div>
                     <div class="image-row">
-                        <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690525/original_c81fc7a8d7b17c8d4bdd7badeb0e8042.jpg?1743548959?bc=0" alt="" id="location-1">
+                        <img src="https://d2w9rnfcy7mm78.cloudfront.net/36575791/original_f9e72d9aff25dd99bc8be45412c68526.png?1746837001?bc=0" id="location-1" class="big-img">
                         <div class="secondary-images">
-                            <img src="https://i.namu.wiki/i/Vz2MwsbJqBdX6QKKG48hjit-16NsMSQOBHzkaT1FeLgfRE2IZlvVKjCYvWueauGXy9SORFcbNnr2bwPwy23KyA.webp" alt="">
-                            <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690527/original_1c5d1b66702401d8dc5bc11170d27c58.png?1743548961?bc=0" alt="">
+                            <img src="https://d2w9rnfcy7mm78.cloudfront.net/36575790/original_ef06719c35c9df5b0eaebff981d22cb0.png?1746836999?bc=0">
+                            <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690527/original_1c5d1b66702401d8dc5bc11170d27c58.png?1743548961?bc=0">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
 
     <footer>
         <div class="content">
