--- a/gallery.html
+++ b/gallery.html
@@ -154,9 +154,6 @@
             <div class="slide">
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354610/original_0528aadbd5104d0ff89e9574647ff6d0.jpg?1746006650?bc=0" alt="Image 25">
             </div>
-            <div class="slide">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/36354625/original_e21d18c506d9434e01ee1671a88e4705.jpg?1746006652?bc=0" alt="Image 26">
-            </div>
         </div>
     </div>
     
@@ -173,6 +170,11 @@
             </div>
             <div class="des">
                 © 2025 Riot Games, Inc. League of Legends and all related logos, characters, names and distinctive likenesses thereof are exclusive property of Riot Games, Inc. All Rights Reserved.
+            </div>
+            <div class="feedback">
+                <div class="des">
+                    <a href="feedback.html">Feedback!</a>
+                </div>
             </div>
         </div>
     </footer>
