feedback page + footer edits

--- a/character.html
+++ b/character.html
@@ -21,6 +21,7 @@
             <a href="index.html" id="h5">Home</a>
             <a href="character.html" id="h5"><span>About</span></a>
             <a href="gallery.html" id="h5">Gallery</a>
+            <a href="feedback.html" id="h5">Feedback</a>
         </div>
     </div>
 
@@ -594,17 +595,17 @@
 
 
     <footer>
-        <div class="content">
-            <div class="des" id="show-des">
+        <div class="content" id="medium-body">
+            <div class="feedback">
+                <div class="des">
+                    <a href="feedback.html">Feedback!</a>
+                </div>
+            </div>
+            <div class="des" id="show">
                 © 2025 Riot Games, Inc. All Rights Reserved.
             </div>
-            <div class="des">
-                © 2025 Riot Games, Inc. League of Legends and all related logos, characters, names and distinctive likenesses thereof are exclusive property of Riot Games, Inc. All Rights Reserved.
-            </div>
-        </div>
-        <div class="feedback">
-            <div class="des">
-                <a href="feedback.html">Feedback!</a>
+            <div class="des" id="hide">
+                © 2025 Riot Games, Inc. League of Legends and all related logos, characters, names and distinctive likenesses there of are exclusive property of Riot Games, Inc. All Rights Reserved.
             </div>
         </div>
     </footer>
