--- a/feedback.html
+++ b/feedback.html
@@ -19,8 +19,9 @@
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832596/original_0bcfe2c4f4f02539969a327b9af4cccb.png?1744076514?bc=0" alt="Riot Games">
             </a>
             <a href="index.html" id="h5">Home</a>
-            <a href="character.html" id="h5"><span>About</span></a>
+            <a href="character.html" id="h5">About</a>
             <a href="gallery.html" id="h5">Gallery</a>
+            <a href="feedback.html" id="h5"><span>Feedback</span></a>
         </div>
     </div>
 
@@ -46,7 +47,7 @@
             <div class="topic" id="h5">
                 <a href="index.html">Home</a>
             </div>
-            <div class="topic" id="h5"><a href="character.html"><span>About</span></a></div>
+            <div class="topic" id="h5"><a href="character.html">About</a></div>
             <div class="topic" id="h5">
                 <a href="gallery.html">Gallery</a>
             </div>
@@ -69,7 +70,7 @@
                 Give me some feedback!
             </div>
             <div class="des" id="medium-body">
-                I would love to here from you. 
+                I would love to here from you 
             </div>
         </div>
     </div>
@@ -93,17 +94,32 @@
         </div>
     </div>
 
+    <div class="line-break"></div>
 
+    <div class="Library">
+        <div class="content">
+            <div class="topic-row">
+                    <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832296/original_303dd5db2cd8d169fc9a0585960215c0.png?1744075314?bc=0" alt="Left decoration">
+                    <div class="topic" id="h4">p5.js code</div>
+                    <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832297/original_cfc4b90487ac384b71b6caffe6fd62e1.png?1744075314?bc=0" alt="Right decoration">
+            </div>
+            <div class="topic" id="h1">
+                Creative coding library
+            </div>
+        </div>
+    </div>
 
-
+    <div class="CodeLibrary">
+        <iframe src="https://editor.p5js.org/Strike0127/full/Qhq2qtHnc"></iframe>
+    </div>
 
     <footer>
-        <div class="content">
-            <div class="des" id="show-des">
+        <div class="content" id="medium-body">
+            <div class="des" id="show">
                 © 2025 Riot Games, Inc. All Rights Reserved.
             </div>
-            <div class="des">
-                © 2025 Riot Games, Inc. League of Legends and all related logos, characters, names and distinctive likenesses thereof are exclusive property of Riot Games, Inc. All Rights Reserved.
+            <div class="des" id="hide">
+                © 2025 Riot Games, Inc. League of Legends and all related logos, characters, names and distinctive likenesses there of are exclusive property of Riot Games, Inc. All Rights Reserved.
             </div>
         </div>
     </footer>
