--- a/gallery.html
+++ b/gallery.html
@@ -21,6 +21,7 @@
             <a href="index.html" id="h5">Home</a>
             <a href="character.html" id="h5">About</a>
             <a href="gallery.html" id="h5"><span>Gallery</span></a>
+            <a href="feedback.html" id="h5">Feedback</a>
         </div>
     </div>
 
@@ -164,17 +165,17 @@
 
 
     <footer>
-        <div class="content">
-            <div class="des" id="show-des">
-                © 2025 Riot Games, Inc. All Rights Reserved.
-            </div>
-            <div class="des">
-                © 2025 Riot Games, Inc. League of Legends and all related logos, characters, names and distinctive likenesses thereof are exclusive property of Riot Games, Inc. All Rights Reserved.
-            </div>
+        <div class="content" id="medium-body">
             <div class="feedback">
                 <div class="des">
                     <a href="feedback.html">Feedback!</a>
                 </div>
+            </div>
+            <div class="des" id="show">
+                © 2025 Riot Games, Inc. All Rights Reserved.
+            </div>
+            <div class="des" id="hide">
+                © 2025 Riot Games, Inc. League of Legends and all related logos, characters, names and distinctive likenesses there of are exclusive property of Riot Games, Inc. All Rights Reserved.
             </div>
         </div>
     </footer>
