--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="topic" id="h4">Music Created for Arcane</div>
                 <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832297/original_cfc4b90487ac384b71b6caffe6fd62e1.png?1744075314?bc=0" alt="Right decoration">
             </div>
-            <div class="title" id="h1">Arcane Soundtrack</div>
+            <div class="title" id="h1">Soundtrack</div>
             <div class="des" id="medium-body">
             Arcane has two main soundtracks, one for each of its two seasons. Season One features 11 vocal tracks, including the hit single “Enemy” by Imagine Dragons and JID. The Season Two soundtrack was released in 2024 to accompany the second season and has already surpassed 500 million streams globally, boosted in part by its growing popularity in the UK. These soundtracks are available on paid music platforms such as Spotify and Apple Music, as well as for free on YouTube.
             </div>
