video carousel updated

--- a/index.html
+++ b/index.html
@@ -135,24 +135,96 @@
     <div class="showcase">
         <div class="content">
             <div class="topic-row">
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832296/original_303dd5db2cd8d169fc9a0585960215c0.png?1744075314?bc=0" alt="Left decoration">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832296/original_303dd5db2cd8d169fc9a0585960215c0.png?1744075314?bc=0" alt="Left decoration" width="50">
                 <div class="topic" id="h4">Showcase of Arcane</div>
-                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832297/original_cfc4b90487ac384b71b6caffe6fd62e1.png?1744075314?bc=0" alt="Right decoration">
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832297/original_cfc4b90487ac384b71b6caffe6fd62e1.png?1744075314?bc=0" alt="Right decoration" width="50">
             </div>
             <div class="title" id="h1">Video Content</div>
             <div class="des" id="medium-body">
-                Click on the video to change it!
+                Clips from the Arcane TV show.
             </div>
+
+            <br>
+
+            <!-- carousel -->
             <div class="carousel">
-                <div class="slide">
-                    <video autoplay muted loop playsinline src="https://attachments.are.na/35886521/37b0c20ca224fbfe87bdf1f0d379dadd.mp4?1744260786"></video>
-                    <video autoplay muted loop playsinline src="https://attachments.are.na/35886524/026dcc4decd4e37d91ea00c401064491.mp4?1744260791"></video>
-                    <video autoplay muted loop playsinline src="https://attachments.are.na/35886587/2bf155ea52adb336b92719dfb9c9d6c1.mp4?1744261365"></video>
-                    <video autoplay muted loop playsinline src="https://attachments.are.na/35886663/0af0954f170b0375efcbf68d8c9e69ff.mp4?1744261717"></video>
-                    <video autoplay muted loop playsinline src="https://attachments.are.na/35886568/5acf1286ecc725e2c9e5d26fa3785408.mp4?1744261118"></video>
+                <div class="slide fade">
+                    <div class="iframe-container">
+                        <iframe id="video1" src="https://www.youtube.com/embed/fXmAurh012s?si=mokuLgtottEwwxx3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                    <div class="des" id="stat-number">
+                        Season 1 (1/9)
+                    </div>
                 </div>
-                <button><</button>
-                <button>></button>
+                <div class="slide fade">
+                    <div class="iframe-container">
+                        <iframe id="video2" src="https://www.youtube.com/embed/6U-2KRdf5WY?si=9B78GJ96KN5beeMh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                    <div class="des" id="stat-number">
+                        Season 1 - Zaun (2/9)
+                    </div>
+                </div>
+                <div class="slide fade">
+                    <div class="iframe-container">
+                        <iframe id="video2" src="https://www.youtube.com/embed/HTdA64XPnro?si=mK19y95QCDMizFvQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                    <div class="des" id="stat-number">
+                        Season 1 - Piltover (3/9)
+                    </div>
+                </div>
+                <div class="slide fade">
+                    <div class="iframe-container">
+                        <iframe id="video2" src="https://www.youtube.com/embed/-X6LntRnSdA?si=aFgRb1KomE3V6CLd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                    <div class="des" id="stat-number">
+                        Season 1 - Viktor and Jayce (4/9)
+                    </div>
+                </div>
+                <div class="slide fade">
+                    <div class="iframe-container">
+                        <iframe id="video3" src="https://www.youtube.com/embed/OkscEokV238?si=7IChlAmq--wNUUs8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                    <div class="des" id="stat-number">
+                        Season 1 - Jinx and Ekko Fight (5/9)
+                    </div>
+                </div>
+                <div class="slide fade">
+                    <div class="iframe-container">
+                        <iframe id="video4" src="https://www.youtube.com/embed/JpQOtc-YgUY?si=Koqeo3qUP56V-VUf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                    <div class="des" id="stat-number">
+                        Season 2 (6/9)
+                    </div>
+                </div>
+                <div class="slide fade">
+                    <div class="iframe-container">
+                        <iframe id="video5" src="https://www.youtube.com/embed/X6nsIqFugP8?si=1kxjyRTw2bscVLa3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                    <div class="des" id="stat-number">
+                        Season 2 - 'Sucker' by Marcus King (7/9)
+                    </div>
+                </div>
+                <div class="slide fade">
+                    <div class="iframe-container">
+                        <iframe id="video5" src="https://www.youtube.com/embed/y06_MrWQB6Q?si=3NNxo1_cKoA5yR2F" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                    <div class="des" id="stat-number">
+                        Season 2 - Jinx and Vi Fight (8/9)
+                    </div>
+                </div>
+                <div class="slide fade">
+                    <div class="iframe-container">
+                        <iframe id="video5" src="https://www.youtube.com/embed/l2E7yxarfQM?si=KNfEe_pvFdfPwEUj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                    <div class="des" id="stat-number">
+                        Full Overview (9/9)
+                    </div>
+                </div>
+                
+
+                <!-- buttons -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
         </div>
     </div>
