lots of changes - location text overlay

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="des" id="medium-body">
                 You can watch Arcane on Netflix. It is a TV show that is animated inspired by the video game League of Legends.
             </div>
-            <img src="https://d2w9rnfcy7mm78.cloudfront.net/35690533/original_bc29b9b26038d0658fb69bddaa58e13f.png?1743548988?bc=0">
+            <img src="https://d2w9rnfcy7mm78.cloudfront.net/36663387/original_70e7ec24c61d34b2e982a550f8fe91b6.webp?1747114495?bc=0">
         </div>
     </div>
 
