--- a/character.html
+++ b/character.html
@@ -90,8 +90,8 @@
          
             <div class="carousel">
                 <div class="nav-buttons">
-                    <button class="nav-btn prev-btn">&lt;</button>
-                    <button class="nav-btn next-btn">&gt;</button>
+                    <button class="nav-btn prev-btn">&#10094;</button>
+                    <button class="nav-btn next-btn">&#10095;</button>
                 </div>
             
                 <div class="active-slide-container">
