--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
         </div>
     </div>
 
+    <div class="line-break" id="move"></div>
+
     <!-- Arcane Music -->
     <div class="music" id="music-img">
         <div class="content" id="music">
@@ -130,6 +132,8 @@
     <div class="spotify">
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DX3KVUsNUmJc2?utm_source=generator&theme=0" width="70%" height="450" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
+
+    <div class="line-break" id="move-2"></div>
     
     <!-- videos/content -->
     <div class="showcase">
