--- a/character.html
+++ b/character.html
@@ -75,7 +75,7 @@
         </div>
     </div>
 
-    <div class="line-break"></div>
+    <div class="line-break" id="move"></div>
 
     <div class="down-arrow" id="arrow-alternative" onclick="scrollToTitle();">
         <img src="https://d2w9rnfcy7mm78.cloudfront.net/35832749/original_57974ec6032a64257d8e444971b23858.png?1744077258?bc=0" alt="Down Arrow Alternative">
